--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,7 @@ base {
 }
 
 repositories {
- // Add repositories to retrieve artifacts from in here.
- // You should only use this when depending on other mods because
- // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
- // See https://docs.gradle.org/current/userguide/declaring_repositories.html
- // for more information about repositories.
+ maven { url "https://api.modrinth.com/maven" }
 }
 
 fabricApi {
@@ -23,17 +19,14 @@ fabricApi {
 }
 
 dependencies {
- // To change the versions see the gradle.properties file
  minecraft "com.mojang:minecraft:${project.minecraft_version}"
  mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
  modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
- // Fabric API. This is technically optional, but you probably want it anyway.
  modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
- implementation 'com.google.code.gson:gson:2.11.0'
- implementation 'org.xerial:sqlite-jdbc:3.47.1.0'
- implementation 'net.dv8tion:JDA:5.0.2'
+ modImplementation("maven.modrinth:sqlib:${project.sqlib_version}")
+ include("maven.modrinth:sqlib:${project.sqlib_version}")
 }
 
 processResources {
