--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.1.7-1.21
+mod_version=1.1.8-1.21
 maven_group=net.mat0u5.lifeseries
 archives_base_name=lifeseries
 
 # Dependencies
 fabric_version=0.102.0+1.21
+sqlib_version=3.2.4
