Implemented Stonecutter (multi-version management)
https://stonecutter.kikugie.dev
This took so long to make it work you have no idea

Updated the mod to 1.21.2-3

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,18 @@ pluginManagement {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
+		maven { url = "https://maven.kikugie.dev/releases"}
 		mavenCentral()
 		gradlePluginPortal()
+	}
+}
+plugins {
+	id "dev.kikugie.stonecutter" version "0.5"
+}
+
+stonecutter {
+	create(rootProject) {
+		versions "1.21", "1.21.2"
+		vcsVersion = "1.21"
 	}
 }
