--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
 plugins {
  id 'fabric-loom' version '1.8-SNAPSHOT'
  id 'maven-publish'
+ id "dev.kikugie.j52j" version "1.0.2"
 }
-
-version = project.mod_version
+version = "${project.mod_version}-${stonecutter.current.project}"
 group = project.maven_group
 
 base {
@@ -19,21 +19,28 @@ fabricApi {
 }
 
 dependencies {
- minecraft "com.mojang:minecraft:${project.minecraft_version}"
- mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
- modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+ minecraft("com.mojang:minecraft:${stonecutter.current.project}")
+ mappings("net.fabricmc:yarn:${property("yarn_mappings")}:v2")
 
- modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+ modImplementation("net.fabricmc:fabric-loader:${property("loader_version")}")
+ modImplementation("net.fabricmc.fabric-api:fabric-api:${property("fabric_version")}")
 
  modImplementation("maven.modrinth:sqlib:${project.sqlib_version}")
  include("maven.modrinth:sqlib:${project.sqlib_version}")
 }
+loom {
+ runConfigs.all {
+  ideConfigGenerated true // Run configurations are not created for subprojects by default
+  runDir "../../run" // Use a shared run folder and create separate worlds
+ }
+}
 
 processResources {
- inputs.property "version", project.version
-
+ inputs.property "version", stonecutter.current.version
  filesMatching("fabric.mod.json") {
-  expand "version": project.version
+  expand "version": version,
+          "targetVersion": project.property('target_version'),
+          "minecraftVersion": stonecutter.current.version
  }
 }
 
