--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.16.9
+minecraft_version=[VERSIONED]
+yarn_mappings=[VERSIONED]
+loader_version=[VERSIONED]
+fabric_version=[VERSIONED]
+target_version=[VERSIONED]
 
 # Mod Properties
-mod_version=1.2.1.2-1.21
+mod_version=1.2.1.2
 maven_group=net.mat0u5.lifeseries
 archives_base_name=lifeseries
 
 # Dependencies
-fabric_version=0.102.0+1.21
 sqlib_version=3.2.4
