--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
   build:
     strategy:
       matrix:
-        # Use these Java versions
         java: [
-          21,    # Current Java LTS
-        ]
+          21,
+        ],
+        minecraft_version: [1.21, 1.21.2]
     runs-on: ubuntu-22.04
     steps:
       - name: Get branch name
@@ -66,5 +66,5 @@ jobs:
         if: ${{ matrix.java == '21' }} # Only upload artifacts built from latest java
         uses: actions/upload-artifact@v4
         with:
-          name: Artifacts
-          path: */build/libs/
+          name: Artifacts-${{ matrix.minecraft_version }}
+          path: versions/${{ matrix.minecraft_version }}/build/libs/
