--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,7 @@ jobs:
   build:
     strategy:
       matrix:
-        java: [
-          21,
-        ],
+        java: [21]
         minecraft_version: [1.21, 1.21.2]
     runs-on: ubuntu-22.04
     steps:
