--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,7 @@ jobs:
           echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
           
       - name: Discord Message
+      if: ${{ matrix.minecraft_version == '1.21' }} # Only run for the first Minecraft version
         uses: satak/webrequest-action@master
         with:
           url: ${{ secrets.DISCORD_WEBHOOK }}
@@ -39,6 +40,7 @@ jobs:
           payload: '{ "embeds": [{ "title": "[${{ github.repository }}:${{ env.BRANCH_NAME }}] - new commit", "author": {"name": "${{ github.event.head_commit.author.name}}","url": "https://github.com/${{ github.event.head_commit.author.name}}","icon_url": "https://github.com/${{ github.event.head_commit.author.name}}.png"},"description": "```Commit Message:\n\n${{ env.COMMIT_MESSAGE }}```", "url": "https://github.com/${{ github.repository }}/commit/${{ github.sha }}", "color": 5315202 }] }'
 
       - name: Discord Message #2
+        if: ${{ matrix.minecraft_version == '1.21' }} # Only run for the first Minecraft version
         uses: satak/webrequest-action@master
         with:
           url: ${{ secrets.DISCORD_WEBHOOK_2 }}
