--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ fabric_version=[VERSIONED]
 target_version=[VERSIONED]
 
 # Mod Properties
-mod_version=1.2.1.7
+mod_version=dev-1.2.1.8
 maven_group=net.mat0u5.lifeseries
 archives_base_name=lifeseries
 
