--- a/versions/1.21.2/gradle.properties
+++ b/versions/1.21.2/gradle.properties
@@ -2,4 +2,4 @@ minecraft_version=1.21.2
 yarn_mappings=1.21.2+build.1
 loader_version=0.16.9
 fabric_version=0.106.1+1.21.2
-target_version=>=1.21.2
+target_version=>=1.21.2 <=1.21.4
