--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,12 @@ yarn_mappings=[VERSIONED]
 loader_version=[VERSIONED]
 fabric_version=[VERSIONED]
 target_version=[VERSIONED]
-
-# Mod Properties
-mod_version=dev-1.2.2.10
-maven_group=net.mat0u5.lifeseries
-archives_base_name=lifeseries
-
 # Dependencies
 sqlib_version=3.2.5
+polymer_version=[VERSIONED]
+blockbench_import_library_version=[VERSIONED]
+
+# Mod Properties
+mod_version=dev-1.2.2.11
+maven_group=net.mat0u5.lifeseries
+archives_base_name=lifeseries
