--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ base {
 
 repositories {
  maven { url "https://api.modrinth.com/maven" }
+ maven { url 'https://maven.nucleoid.xyz' }
+ maven { url "https://maven.tomalbrc.de" }
 }
 
 fabricApi {
@@ -26,6 +28,16 @@ dependencies {
 
  modImplementation("maven.modrinth:sqlib:${project.sqlib_version}")
  include("maven.modrinth:sqlib:${project.sqlib_version}")
+
+
+
+ modImplementation "eu.pb4:polymer-core:${project.polymer_version}"
+ modImplementation "eu.pb4:polymer-networking:${project.polymer_version}"
+ modImplementation "eu.pb4:polymer-resource-pack:${project.polymer_version}"
+ modImplementation "eu.pb4:polymer-virtual-entity:${project.polymer_version}"
+ modRuntimeOnly "eu.pb4:polymer-autohost:${project.polymer_version}"
+
+ modImplementation include("de.tomalbrc:blockbench-import-library:${project.blockbench_import_library_version}")
 }
 loom {
  runConfigs.all {
