--- a/settings.gradle
+++ b/settings.gradle
@@ -15,7 +15,7 @@ plugins {
 
 stonecutter {
 	create(rootProject) {
-		versions "1.21", "1.21.2"
+		versions "1.21", "1.21.2", "1.21.4"
 		vcsVersion = "1.21"
 	}
 }
