--- a/versions/1.21.2/gradle.properties
+++ b/versions/1.21.2/gradle.properties
@@ -3,3 +3,6 @@ yarn_mappings=1.21.2+build.1
 loader_version=0.16.9
 fabric_version=0.106.1+1.21.2
 target_version=>=1.21.2 <=1.21.4
+
+polymer_version=0.10.2+1.21.3
+blockbench_import_library_version=1.1.12+1.21.2
