--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -3,3 +3,6 @@ yarn_mappings=1.21+build.9
 loader_version=0.16.9
 fabric_version=0.102.0+1.21
 target_version=>=1.21 <=1.21.1
+
+polymer_version=0.9.18+1.21.1
+blockbench_import_library_version=1.1.12+1.21
