--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
  id 'fabric-loom' version '1.8-SNAPSHOT'
  id 'maven-publish'
 }
-version = "${project.mod_version}-${stonecutter.current.project}"
+version = "${project.mod_version}+${stonecutter.current.project}"
 group = project.maven_group
 
 base {
@@ -18,7 +18,6 @@ repositories {
 fabricApi {
  configureDataGeneration()
 }
-
 dependencies {
  minecraft("com.mojang:minecraft:${stonecutter.current.project}")
  mappings("net.fabricmc:yarn:${property("yarn_mappings")}:v2")
@@ -29,14 +28,7 @@ dependencies {
  modImplementation("maven.modrinth:sqlib:${project.sqlib_version}")
  include("maven.modrinth:sqlib:${project.sqlib_version}")
 
-
-
- modImplementation include("eu.pb4:polymer-core:${project.polymer_version}")
- modImplementation include("eu.pb4:polymer-networking:${project.polymer_version}")
- modImplementation include("eu.pb4:polymer-resource-pack:${project.polymer_version}")
- modImplementation include("eu.pb4:polymer-virtual-entity:${project.polymer_version}")
- modRuntimeOnly "eu.pb4:polymer-autohost:${project.polymer_version}"
-
+ modImplementation include("eu.pb4:polymer-bundled:${project.polymer_version}")
  modImplementation include("de.tomalbrc:blockbench-import-library:${project.blockbench_import_library_version}")
 }
 loom {
