--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
  maven { url "https://api.modrinth.com/maven" }
  maven { url 'https://maven.nucleoid.xyz' }
  maven { url "https://maven.tomalbrc.de" }
+ maven {
+  name = 'Ladysnake Mods'
+  url = 'https://maven.ladysnake.org/releases'
+ }
 }
 
 fabricApi {
@@ -27,6 +31,8 @@ dependencies {
 
  modImplementation include("eu.pb4:polymer-bundled:${project.polymer_version}")
  modImplementation include("de.tomalbrc:blockbench-import-library:${project.blockbench_import_library_version}")
+ modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cardinal_components_api_version}")
+ modImplementation include("org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cardinal_components_api_version}")
 }
 loom {
  runConfigs.all {
