--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,9 @@ target_version=[VERSIONED]
 # Dependencies
 polymer_version=[VERSIONED]
 blockbench_import_library_version=[VERSIONED]
+cardinal_components_api_version=[VERSIONED]
 
 # Mod Properties
-mod_version=dev-1.2.2.61
+mod_version=dev-1.2.2.62
 maven_group=net.mat0u5.lifeseries
 archives_base_name=lifeseries
