--- a/versions/1.21.2/gradle.properties
+++ b/versions/1.21.2/gradle.properties
@@ -6,3 +6,4 @@ target_version=>=1.21.2 <=1.21.3
 
 polymer_version=0.10.0+1.21.2
 blockbench_import_library_version=1.1.18+1.21.2
+cardinal_components_api_version=6.2.2
