--- a/versions/1.21.4/gradle.properties
+++ b/versions/1.21.4/gradle.properties
@@ -6,3 +6,4 @@ target_version==1.21.4
 
 polymer_version=0.11.5+1.21.4
 blockbench_import_library_version=1.1.20+1.21.4
+cardinal_components_api_version=6.2.2
