--- a/versions/1.21/gradle.properties
+++ b/versions/1.21/gradle.properties
@@ -6,3 +6,4 @@ target_version=>=1.21 <=1.21.1
 
 polymer_version=0.9.18+1.21.1
 blockbench_import_library_version=1.1.20+1.21
+cardinal_components_api_version=6.1.2
